# tensor

./: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  stack.yaml  tensor.cabal
Data/: Cardinal.hs  MultiIndex.hs  Ordinal.hs  Tensor.hs  TypeAlgebra.hs  TypeList.hs
Data/MultiIndex/: Internal.hs
Data/Tensor/: Examples.hs  LinearAlgebra.hs  Pure.hs  Vector.hs
Data/Tensor/LinearAlgebra/: Common.hs  Vector.hs
Data/Tensor/Vector/: Internal.hs
Data/TypeList/: MultiIndex.hs
Numeric/Blas/: Vector.hs
Test/: MultiIndex.hs  Ordinal.hs  Tensor.hs
src/Data/: Indexable.hs  MultiIndex.hs  Ordinal.hs  Sliceable.hs  Tensor.hs
src/Data/Tensor/: Pure.hs  Vector.hs
src/Data/Tensor/Vector/: Internal.hs
src/Data/TypeList/: MultiIndex.hs
src/Data/TypeList/MultiIndex/: Internal.hs
tests/: MultiIndex.hs  Ordinal.hs  Tensor.hs
