Name:           tensor
Version:        0.0
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Author:         Federico Squartini, Nicola Squartini
Maintainer:     Nicola Squartini <tensor5@gmail.com>
Synopsis:       A completely type-safe library for linear algebra
Category:       Data
Build-Type:     Simple

Library
  Build-Depends:   base == 4.*, vector
  Build-Tools:     ghc >= 7.2.1
  ghc-options:     -Wall -O2
  Exposed-Modules: Data.Cardinal
                   Data.Ordinal
                   Data.Tensor.LinearAlgebra
                   Data.Tensor.LinearAlgebra.Vector
                   Data.TypeAlgebra
                   Data.TypeList
                   Data.TypeList.MultiIndex
                   Data.Tensor
                   Data.Tensor.Vector
  Other-modules: Data.Tensor.Vector.Internal
                 Data.TypeList.MultiIndex.Internal