Name:           tensor
Version:        0.4.0.0
Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Copyright:      © 2012-2015 Nicola Squartini
Author:         Federico Squartini, Nicola Squartini
Maintainer:     Nicola Squartini <tensor5@gmail.com>
Stability:      experimental
Homepage:       http://noaxiom.org/tensor
Bug-Reports:    https://github.com/tensor5/tensor/issues
Synopsis:       A completely type-safe library for linear algebra
Category:       Data, Math
Build-Type:     Simple
Description:

  This library defines data types and classes for fixed dimension
  vectors and tensors. See the homepage <http://noaxiom.org/tensor>
  for more details.

Extra-Source-Files: CHANGELOG
                    README.md

Source-Repository head
  Type:      git
  Location:  git://github.com/tensor5/tensor.git

Source-Repository this
  Type:      git
  Location:  git://github.com/tensor5/tensor.git
  Tag:       v0.4.0.0

Library
  Default-Language:    Haskell2010
  Default-Extensions:  UnicodeSyntax
  Build-Depends:       base                  ==4.7.*,
                       base-unicode-symbols  ==0.2.*,
                       deepseq               ==1.3.*,
                       random                >=1.0 && < 1.2,
                       transformers          ==0.3.*,
                       vector                ==0.10.*
  Build-Tools:         ghc >= 7.8.1
  GHC-Options:         -Wall
  Exposed-Modules:     Data.MultiIndex
                       Data.Sliceable
                       Data.Tensor
                       Data.Tensor.Vector
  Hs-Source-Dirs:      src

Test-Suite test-multiindex
  Type:                detailed-0.9
  Default-Language:    Haskell2010
  Default-Extensions:  UnicodeSyntax
  Test-Module:         MultiIndex
  Build-Depends:       base                  == 4.7.*,
                       base-unicode-symbols  == 0.2.*,
                       Cabal                 >= 1.10,
                       cabal-test-quickcheck == 0.1.*,
                       tensor                == 0.4.*
  GHC-Options:         -Wall
  Hs-Source-Dirs:      tests


Test-Suite test-tensor
  Type:                detailed-0.9
  Default-Language:    Haskell2010
  Default-Extensions:  UnicodeSyntax
  Test-Module:         Tensor
  Build-Depends:       base                  == 4.7.*,
                       base-unicode-symbols  == 0.2.*,
                       Cabal                 >= 1.10,
                       cabal-test-quickcheck == 0.1.*,
                       QuickCheck            == 2.7.*,
                       tensor                == 0.4.*
  GHC-Options:         -Wall
  Hs-Source-Dirs:      tests
